[gd_scene load_steps=31 format=3 uid="uid://etlq2q1jbury"]

[ext_resource type="Script" uid="uid://26mdhyaoq6g5" path="res://Entities/Actors/NPCs/Silas/beehave/silas_alt.gd" id="1_17b4c"]
[ext_resource type="Texture2D" uid="uid://cy1rkbqupy3bh" path="res://Entities/Actors/NPCs/Silas/Art/silas.png" id="2_hdw1b"]
[ext_resource type="Texture2D" uid="uid://l0c4m00kywv" path="res://Entities/Objects/Crop/Art/crops.png" id="3_qtwxn"]
[ext_resource type="AnimationLibrary" uid="uid://sue3u4agdpf" path="res://Entities/Actors/actor_anim_library.res" id="3_tr4bx"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://bluo3agl14ob3" path="res://Entities/Actors/actor_anim_sm.tres" id="4_5m5fc"]
[ext_resource type="PackedScene" uid="uid://cshkpaxgeioxd" path="res://Utilities/Interactions/npc_alt_detector.tscn" id="4_acgvc"]
[ext_resource type="PackedScene" uid="uid://bk10dt7i8uqo6" path="res://Entities/Props/CarryProp/carry_prop.tscn" id="4_q63qr"]
[ext_resource type="Script" uid="uid://bmqjw1xe63sui" path="res://addons/beehave/nodes/beehave_tree.gd" id="4_vmoef"]
[ext_resource type="Script" uid="uid://cr55e3ervhmig" path="res://addons/beehave/nodes/composites/selector.gd" id="5_a23i0"]
[ext_resource type="PackedScene" uid="uid://dt0tf8aaxnjcl" path="res://Utilities/Game/FloatTextController/float_text_controller.tscn" id="5_l6iaq"]
[ext_resource type="Texture2D" uid="uid://bspmyqr5k2fwr" path="res://Entities/Objects/Sword/Art/sword.png" id="5_vhpyg"]
[ext_resource type="Script" uid="uid://mtuuxj1jd0m2" path="res://addons/beehave/nodes/composites/sequence.gd" id="6_1ro2l"]
[ext_resource type="PackedScene" uid="uid://b3yvf8qu2yh4k" path="res://Utilities/Game/EmoteController/emote_controller.tscn" id="6_vcruu"]
[ext_resource type="Script" uid="uid://dqm47sqqitkoa" path="res://Entities/Actors/NPCs/Silas/beehave/is_the_agent_idle.gd" id="8_4ytb8"]
[ext_resource type="Script" uid="uid://c72gcr33fwqoj" path="res://Entities/Actors/NPCs/Silas/beehave/personality.gd" id="9_3lm7t"]
[ext_resource type="Script" uid="uid://bnm6eqp75y8n4" path="res://Entities/Actors/NPCs/Silas/beehave/patrol_action.gd" id="9_58j85"]
[ext_resource type="Script" uid="uid://b52tibcmmrqne" path="res://Entities/Actors/NPCs/Silas/beehave/physiological.gd" id="10_e21mu"]
[ext_resource type="Script" uid="uid://cgv34kx0prf7l" path="res://Entities/Actors/NPCs/Silas/beehave/chase_actor.gd" id="12_q20m7"]
[ext_resource type="Script" uid="uid://btp4ipyilapo1" path="res://Entities/Actors/NPCs/Silas/beehave/steal_money_from_actor.gd" id="13_q0u1v"]
[ext_resource type="Script" uid="uid://l2onprtrlq40" path="res://Entities/Actors/NPCs/Silas/beehave/wait_for_5_sec.gd" id="13_sovwx"]
[ext_resource type="Script" uid="uid://dawd1b7tdwl5c" path="res://Entities/Actors/NPCs/Silas/beehave/go_to_house.gd" id="15_yth3l"]
[ext_resource type="Script" uid="uid://bgxm0q2ycclid" path="res://addons/beehave/blackboard.gd" id="16_8orm2"]
[ext_resource type="Script" uid="uid://c6ten17thx7g0" path="res://Entities/Actors/NPCs/Silas/beehave/is_the_food_resource_low.gd" id="17_gn6mj"]
[ext_resource type="Script" uid="uid://ciufjcucrk3da" path="res://Entities/Actors/NPCs/Silas/beehave/go_to_market.gd" id="18_e1h5y"]
[ext_resource type="Script" uid="uid://nanbxpy7rjtr" path="res://Entities/Actors/NPCs/Silas/beehave/buy_food.gd" id="19_qbsuj"]
[ext_resource type="Script" uid="uid://dmmlgm251npvd" path="res://Entities/Actors/NPCs/Silas/beehave/eat_food.gd" id="21_oqw3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7odsg"]
size = Vector2(26, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_30oj8"]
radius = 3.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyjh3"]
size = Vector2(24, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_5724d"]
radius = 44.0454

[node name="SilasAlt" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_17b4c")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_hdw1b")
hframes = 8
vframes = 6
frame = 8

[node name="SeedProp" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -21)
texture = ExtResource("3_qtwxn")
hframes = 6
vframes = 2
frame = 6
metadata/_edit_lock_ = true

[node name="HarvestProp" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -3)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_qtwxn")
hframes = 6
vframes = 2
frame = 11
metadata/_edit_lock_ = true

[node name="EatProp" type="Node2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -5)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="EatProp"]
position = Vector2(9, 0)
texture = ExtResource("3_qtwxn")
hframes = 6
vframes = 2
frame = 11
metadata/_edit_lock_ = true

[node name="CarryProp" parent="." instance=ExtResource("4_q63qr")]
visible = false

[node name="Weapon" type="Area2D" parent="."]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]
position = Vector2(16, 0)
rotation = 1.5708
texture = ExtResource("5_vhpyg")
hframes = 4
vframes = 3
frame = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2(13, -6)
shape = SubResource("RectangleShape2D_7odsg")
disabled = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_30oj8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("3_tr4bx")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource("4_5m5fc")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = 0
parameters/Eat/blend_position = 0
parameters/Harvest/blend_position = 0
parameters/Idle/blend_position = 0.0
parameters/Move/blend_position = 0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 5.0
debug_enabled = true

[node name="RearMarker" type="Node2D" parent="."]
rotation = 3.14159

[node name="Marker2D" type="Marker2D" parent="RearMarker"]
position = Vector2(-10, -2.53518e-05)

[node name="StealArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StealArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_eyjh3")

[node name="NpcAltDetector" parent="." instance=ExtResource("4_acgvc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NpcAltDetector"]
shape = SubResource("CircleShape2D_5724d")

[node name="EmoteController" parent="." instance=ExtResource("6_vcruu")]

[node name="FloatTextController" parent="." instance=ExtResource("5_l6iaq")]

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("16_8orm2")
blackboard = {
"agent_arrived": false,
"current_state": "idle",
"food_inventory": 5,
"is_full": 50,
"money": 100
}

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="Personality" type="Node" parent="."]
script = ExtResource("9_3lm7t")

[node name="Physiological" type="Node" parent="."]
script = ExtResource("10_e21mu")

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="SilasBehaviour" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("4_vmoef")
blackboard = NodePath("../Blackboard")
actor = NodePath("..")

[node name="SelectorComposite" type="Node" parent="SilasBehaviour"]
script = ExtResource("5_a23i0")

[node name="Go To House" type="Node" parent="SilasBehaviour/SelectorComposite"]
script = ExtResource("15_yth3l")

[node name="Eat Food" type="Node" parent="SilasBehaviour/SelectorComposite"]
script = ExtResource("21_oqw3x")

[node name="Buy Food" type="Node" parent="SilasBehaviour/SelectorComposite"]
script = ExtResource("6_1ro2l")

[node name="Is The Food Resource Low" type="Node" parent="SilasBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("17_gn6mj")

[node name="Go To Market" type="Node" parent="SilasBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("18_e1h5y")

[node name="Buy Food" type="Node" parent="SilasBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("19_qbsuj")

[node name="On Patrol" type="Node" parent="SilasBehaviour/SelectorComposite"]
script = ExtResource("6_1ro2l")

[node name="Is The Agent Idle" type="Node" parent="SilasBehaviour/SelectorComposite/On Patrol"]
script = ExtResource("8_4ytb8")

[node name="Wait For 5 Sec" type="Node" parent="SilasBehaviour/SelectorComposite/On Patrol"]
script = ExtResource("13_sovwx")

[node name="Patrol Action" type="Node" parent="SilasBehaviour/SelectorComposite/On Patrol"]
script = ExtResource("9_58j85")

[node name="On Steal" type="Node" parent="SilasBehaviour/SelectorComposite"]
script = ExtResource("6_1ro2l")

[node name="Chase Actor" type="Node" parent="SilasBehaviour/SelectorComposite/On Steal"]
script = ExtResource("12_q20m7")

[node name="Steal Money From Actor" type="Node" parent="SilasBehaviour/SelectorComposite/On Steal"]
script = ExtResource("13_q0u1v")

[connection signal="animation_finished" from="AnimationTree" to="SilasBehaviour/SelectorComposite/Eat Food" method="_on_animation_tree_animation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="StealArea" to="SilasBehaviour/SelectorComposite/On Steal/Chase Actor" method="_on_steal_area_body_entered"]
[connection signal="body_entered" from="NpcAltDetector" to="Personality" method="_on_npc_alt_detector_body_entered"]
[connection signal="timeout" from="Timer" to="SilasBehaviour/SelectorComposite/On Patrol/Wait For 5 Sec" method="_on_timer_timeout"]
[connection signal="timeout" from="HungerTimer" to="Physiological" method="hunger_decay_timeout"]
[connection signal="move_actor" from="SilasBehaviour/SelectorComposite/Go To House" to="." method="move_actor"]
[connection signal="move_actor" from="SilasBehaviour/SelectorComposite/Buy Food/Go To Market" to="." method="move_actor"]
[connection signal="move_actor" from="SilasBehaviour/SelectorComposite/On Patrol/Patrol Action" to="." method="move_actor"]
[connection signal="move_actor" from="SilasBehaviour/SelectorComposite/On Steal/Chase Actor" to="." method="move_actor"]

[editable path="CarryProp"]
